--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
     "next": "14.2.4",
     "react": "^18",
