--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
-    "next": "14.2.4",
+    "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
